# IG-Detective

./: .dockerignore  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  contributors.md  detective.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
.github/: FUNDING.yml
src/api/: auth.py  client.py  endpoints.py
src/cli/: formatters.py  shell.py
src/core/: cache.py  config.py  exceptions.py  models.py
src/ig_detective/: cli.py  config.py
src/ig_detective/core/: models.py  scraper.py
src/modules/: analytics.py  evasion.py  exporter.py  recon.py  surveillance.py
src/python/: cli.py
src/python/core/: analysis.py  models.py  scraper.py
src/python/utils/: cache.py
tests/: test_cache.py  test_interactive.py  test_safe_scraper.py  test_scraper.py
