[project]
name = "ig-detective"
version = "0.1.0"
description = "Advanced OSINT tool for Instagram with modern CLI and safe scraping features."
authors = [
    {name = "shredzwho", email = "your.email@example.com"},
]
dependencies = [
    "instaloader>=4.10",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ig-detective = "ig_detective.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
